Sidebar markup and styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,77 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="sidebar"></div>
+    <div class="sidebar">
+      <div class="logo">
+        <img src="./assets/icons/view-dashboard.svg" alt="" />
+        <span>Dashboard</span>
+      </div>
+      <nav>
+        <ul>
+          <li>
+            <a href="#">
+              <img src="./assets/icons/home.svg" alt="" />
+              <span>Home</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="./assets/icons/card-account-details-outline.svg"
+                alt=""
+              />
+              <span>Profile</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./assets/icons/message-reply.svg" alt="" />
+              <span>Messages</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./assets/icons/clock-time-three.svg" alt="" />
+              <span>History</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./assets/icons/note-multiple.svg" alt="" />
+              <span>Tasks</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./assets/icons/account-group.svg" alt="" />
+              <span>Communities</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <div>
+        <ul>
+          <li>
+            <a href="#">
+              <img src="./assets/icons/cog.svg" alt="" />
+              <span>Settings</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./assets/icons/help-box.svg" alt="" />
+              <span>Support</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./assets/icons/shield-check.svg" alt="" />
+              <span>Privacy</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
     <div class="header"></div>
     <div class="main-content"></div>
   </body>
