Header markup and styles

--- a/index.html
+++ b/index.html
@@ -85,7 +85,45 @@
         </ul>
       </div>
     </div>
-    <div class="header"></div>
+    <div class="header">
+      <form action="#" method="get" id="search">
+        <input
+          type="image"
+          src="./assets/icons/magnify.svg"
+          class="search-button"
+        />
+        <input name="search" type="search" />
+      </form>
+      <div class="bell-user">
+        <img src="./assets/icons/bell-ring-outline.svg" alt="" class="bell" />
+        <img
+          src="./assets/avatars/avatar-22-svgrepo-com.svg"
+          class="avatar"
+          alt=""
+        />
+        <span>Morgan Oakley</span>
+      </div>
+      <div class="greeting">
+        <img src="./assets/avatars/avatar-22-svgrepo-com.svg" alt="" />
+        <p>
+          <span>Hi there,</span>
+          <span class="username">Morgan Oakley (@morgan)</span>
+        </p>
+      </div>
+      <div class="buttons">
+        <ul>
+          <li>
+            <button>New</button>
+          </li>
+          <li>
+            <button>Upload</button>
+          </li>
+          <li>
+            <button>Share</button>
+          </li>
+        </ul>
+      </div>
+    </div>
     <div class="main-content"></div>
   </body>
 </html>
