Projects markup and styles

--- a/index.html
+++ b/index.html
@@ -132,6 +132,328 @@
           <!-- ./assets/icons/star-plus-outline.svg
           ./assets/icons/eye-plus-outline.svg
           ./assets/icons/source-fork.svg -->
+
+          <div class="card">
+            <p class="title">Lorem, ipsum dolor.</p>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro
+              beatae quidem exercitationem impedit possimus fugiat numquam autem
+              illum obcaecati mollitia! Porro similique, voluptatum atque
+              molestiae magni iste ipsum dolorum quod.
+            </p>
+            <ul class="actions">
+              <li>
+                <img src="./assets/icons/star-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/eye-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/source-fork.svg" alt="" />
+              </li>
+            </ul>
+          </div>
+          <div class="card">
+            <p class="title">Molestiae, commodi quibusdam.</p>
+            <p>
+              Ab voluptate, libero atque rerum adipisci veritatis. Voluptates
+              doloribus, voluptas tempore, sapiente suscipit ex ullam esse
+              quasi, magni quos similique ratione quaerat placeat! Officia,
+              dolorem maxime aspernatur tempora ipsa cum!
+            </p>
+            <ul class="actions">
+              <li>
+                <img src="./assets/icons/star-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/eye-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/source-fork.svg" alt="" />
+              </li>
+            </ul>
+          </div>
+          <div class="card">
+            <p class="title">Ullam, necessitatibus voluptates.</p>
+            <p>
+              Sunt, quia architecto ut nisi atque sit quae corrupti natus. Nemo
+              dolores sint ad, placeat labore, quas impedit enim, voluptas totam
+              autem est commodi necessitatibus tempore non minima molestias
+              nulla.
+            </p>
+            <ul class="actions">
+              <li>
+                <img src="./assets/icons/star-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/eye-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/source-fork.svg" alt="" />
+              </li>
+            </ul>
+          </div>
+          <div class="card">
+            <p class="title">Quod, eaque corrupti.</p>
+            <p>
+              Magni provident nam id repellendus distinctio culpa ullam
+              excepturi repudiandae quas ipsa quaerat veniam eius blanditiis
+              sint porro iure quasi ratione ab rem quos sequi libero voluptates,
+              accusamus sapiente. Impedit!
+            </p>
+            <ul class="actions">
+              <li>
+                <img src="./assets/icons/star-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/eye-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/source-fork.svg" alt="" />
+              </li>
+            </ul>
+          </div>
+          <div class="card">
+            <p class="title">Ipsam, quisquam magni.</p>
+            <p>
+              Delectus laboriosam voluptate nesciunt quia facilis, ipsum officia
+              architecto vero earum repellendus natus quisquam et, veritatis
+              necessitatibus itaque ut nihil totam deleniti maiores rerum
+              dolorum quibusdam iure ab culpa! Eligendi?
+            </p>
+            <ul class="actions">
+              <li>
+                <img src="./assets/icons/star-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/eye-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/source-fork.svg" alt="" />
+              </li>
+            </ul>
+          </div>
+          <div class="card">
+            <p class="title">Earum, rem porro!</p>
+            <p>
+              Vel aut, ipsam saepe dignissimos sit, asperiores rerum reiciendis
+              id cum voluptatem sint. Similique ad cumque labore suscipit
+              repudiandae praesentium incidunt veniam accusantium veritatis
+              minima. Quo quaerat sequi explicabo ex.
+            </p>
+            <ul class="actions">
+              <li>
+                <img src="./assets/icons/star-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/eye-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/source-fork.svg" alt="" />
+              </li>
+            </ul>
+          </div>
+          <div class="card">
+            <p class="title">Voluptatum, distinctio exercitationem!</p>
+            <p>
+              Odio, officia! Quibusdam a adipisci labore vitae laboriosam.
+              Tempore nisi at ipsa excepturi sequi repudiandae dolorum eligendi
+              harum eveniet ipsam alias, veniam exercitationem voluptas
+              necessitatibus facilis provident voluptatem dicta autem?
+            </p>
+            <ul class="actions">
+              <li>
+                <img src="./assets/icons/star-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/eye-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/source-fork.svg" alt="" />
+              </li>
+            </ul>
+          </div>
+          <div class="card">
+            <p class="title">Sed, odit consectetur.</p>
+            <p>
+              Odio nisi repellendus officia sunt cupiditate culpa aperiam
+              consectetur, asperiores provident laboriosam sapiente rerum eaque
+              soluta quo corporis ex accusantium consequuntur, cum hic
+              dignissimos ipsa maxime maiores sit temporibus? Atque.
+            </p>
+            <ul class="actions">
+              <li>
+                <img src="./assets/icons/star-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/eye-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/source-fork.svg" alt="" />
+              </li>
+            </ul>
+          </div>
+          <div class="card">
+            <p class="title">Reprehenderit, inventore dolor.</p>
+            <p>
+              Omnis adipisci a maxime iure expedita? Maxime omnis incidunt
+              explicabo veniam, doloremque odio at, iure atque consequuntur quas
+              corrupti officia optio harum ratione, hic enim eaque pariatur quod
+              voluptatum sint?
+            </p>
+            <ul class="actions">
+              <li>
+                <img src="./assets/icons/star-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/eye-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/source-fork.svg" alt="" />
+              </li>
+            </ul>
+          </div>
+          <div class="card">
+            <p class="title">Vel, praesentium ea!</p>
+            <p>
+              Neque necessitatibus accusamus recusandae impedit nam perferendis
+              suscipit quod soluta, quibusdam dignissimos quidem iste reiciendis
+              corporis sint possimus commodi labore distinctio animi dolor? A
+              nostrum illo dicta consectetur, perspiciatis praesentium?
+            </p>
+            <ul class="actions">
+              <li>
+                <img src="./assets/icons/star-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/eye-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/source-fork.svg" alt="" />
+              </li>
+            </ul>
+          </div>
+          <div class="card">
+            <p class="title">Et, rerum nihil?</p>
+            <p>
+              Provident magni dolores excepturi, porro asperiores voluptatum.
+              Quasi quo iure ipsam ut nobis quae explicabo odit quisquam. In
+              magnam incidunt, praesentium omnis debitis nostrum sed nisi
+              reiciendis voluptates? Repudiandae, ipsa.
+            </p>
+            <ul class="actions">
+              <li>
+                <img src="./assets/icons/star-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/eye-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/source-fork.svg" alt="" />
+              </li>
+            </ul>
+          </div>
+          <div class="card">
+            <p class="title">Iusto, a quos.</p>
+            <p>
+              Dolore placeat a consequuntur architecto ipsam est dolores tempore
+              sit, beatae nulla soluta doloremque distinctio sequi nemo fugiat
+              vitae modi corporis, nobis aspernatur vel, recusandae dolorem
+              minus? Repellendus, nobis reprehenderit.
+            </p>
+            <ul class="actions">
+              <li>
+                <img src="./assets/icons/star-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/eye-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/source-fork.svg" alt="" />
+              </li>
+            </ul>
+          </div>
+          <div class="card">
+            <p class="title">Veritatis, nihil nemo?</p>
+            <p>
+              Incidunt necessitatibus voluptas qui earum impedit ratione illo
+              et, temporibus aspernatur perferendis consectetur, veniam sequi
+              delectus? Qui ipsa repellat consectetur dolore? Error quas quaerat
+              molestiae laudantium vitae temporibus consectetur blanditiis.
+            </p>
+            <ul class="actions">
+              <li>
+                <img src="./assets/icons/star-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/eye-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/source-fork.svg" alt="" />
+              </li>
+            </ul>
+          </div>
+          <div class="card">
+            <p class="title">Vero, magnam quis!</p>
+            <p>
+              Aliquam vitae optio exercitationem dicta, id est eos repudiandae
+              voluptatum explicabo commodi, pariatur omnis unde harum eaque
+              alias minima deserunt natus quibusdam? Incidunt modi facilis vel
+              quo? Officia, temporibus dicta!
+            </p>
+            <ul class="actions">
+              <li>
+                <img src="./assets/icons/star-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/eye-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/source-fork.svg" alt="" />
+              </li>
+            </ul>
+          </div>
+          <div class="card">
+            <p class="title">Vitae, corrupti repudiandae.</p>
+            <p>
+              Quas dignissimos explicabo doloribus dolores, aperiam quis?
+              Aperiam aspernatur recusandae quo et deleniti. Ex, laborum facere?
+              Nam neque hic, non ea reprehenderit voluptate sapiente sunt, cum
+              eveniet ut corrupti fugit!
+            </p>
+            <ul class="actions">
+              <li>
+                <img src="./assets/icons/star-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/eye-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/source-fork.svg" alt="" />
+              </li>
+            </ul>
+          </div>
+          <div class="card">
+            <p class="title">Totam, voluptas ut.</p>
+            <p>
+              Reprehenderit corrupti numquam nobis necessitatibus consequuntur
+              neque perspiciatis asperiores laborum, a distinctio, veritatis
+              ipsum omnis impedit, molestiae voluptatibus animi aperiam odio
+              ipsa! Aperiam, maxime nemo. Voluptatibus dolorem adipisci
+              blanditiis ullam.
+            </p>
+            <ul class="actions">
+              <li>
+                <img src="./assets/icons/star-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/eye-plus-outline.svg" alt="" />
+              </li>
+              <li>
+                <img src="./assets/icons/source-fork.svg" alt="" />
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
       <aside class="aside">
