Refactor markup and styles to display new avatar images

--- a/index.html
+++ b/index.html
@@ -96,15 +96,23 @@
       </form>
       <div class="bell-user">
         <img src="./assets/icons/bell-ring-outline.svg" alt="" class="bell" />
-        <img
-          src="./assets/avatars/avatar-22-svgrepo-com.svg"
-          class="avatar"
-          alt=""
-        />
+        <div class="avatar-wrapper cat">
+          <img
+            src="./assets/avatars/cat-300x252.webp"
+            class="avatar-img"
+            alt=""
+          />
+        </div>
         <span>Morgan Oakley</span>
       </div>
       <div class="greeting">
-        <img src="./assets/avatars/avatar-22-svgrepo-com.svg" alt="" />
+        <div class="greeting__avatar-wrapper cat">
+          <img
+            src="./assets/avatars/cat-300x252.webp"
+            alt=""
+            class="avatar-img"
+          />
+        </div>
         <p>
           <span>Hi there,</span>
           <span class="username">Morgan Oakley (@morgan)</span>
@@ -492,48 +500,51 @@
         <div class="trending">
           <p class="title">Trending</p>
           <div class="trends">
-            <!-- ./assets/avatars/avatar-7-svgrepo-com.svg
-            ./assets/avatars/avatar-9-svgrepo-com.svg
-            ./assets/avatars/avatar-14-svgrepo-com.svg
-            ./assets/avatars/avatar-22-svgrepo-com.svg -->
-            <!-- div.trend*>img[src=$#]+p -->
             <div class="trend">
-              <img
-                class="avatar"
-                src="./assets/avatars/avatar-7-svgrepo-com.svg"
-                alt=""
-              />
+              <div class="avatar-wrapper dog">
+                <img
+                  class="avatar avatar-img"
+                  src="./assets/avatars/dog-300x192.webp"
+                  alt=""
+                />
+              </div>
               <p>
                 <span class="user">@tegan</span> <span>World Peace Build</span>
               </p>
             </div>
             <div class="trend">
-              <img
-                class="avatar"
-                src="./assets/avatars/avatar-9-svgrepo-com.svg"
-                alt=""
-              />
+              <div class="avatar-wrapper cat">
+                <img
+                  class="avatar avatar-img"
+                  src="./assets/avatars/cat-300x252.webp"
+                  alt=""
+                />
+              </div>
               <p>
                 <span class="user">@kendall</span>
                 <span>Super Cool Project </span>
               </p>
             </div>
             <div class="trend">
-              <img
-                class="avatar"
-                src="./assets/avatars/avatar-14-svgrepo-com.svg"
-                alt=""
-              />
+              <div class="avatar-wrapper superhero">
+                <img
+                  class="avatar avatar-img"
+                  src="./assets/avatars/superhero-188x300.webp"
+                  alt=""
+                />
+              </div>
               <p>
                 <span class="user">@alex</span> <span>Life Changing App</span>
               </p>
             </div>
             <div class="trend">
-              <img
-                class="avatar"
-                src="./assets/avatars/avatar-22-svgrepo-com.svg"
-                alt=""
-              />
+              <div class="avatar-wrapper penguin">
+                <img
+                  class="avatar avatar-img"
+                  src="./assets/avatars/penguin-202x300.webp"
+                  alt=""
+                />
+              </div>
               <p>
                 <span class="user">@morgan</span> <span>No Traffic Maker</span>
               </p>
